--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -59,9 +59,27 @@ input {
 }
 
 .info-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   height: 200px;
   border: 1px solid black;
   border-radius: 5px;
+  gap: 5px;
+  padding: 5px;
+}
+
+.info-item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 0 5px;
+  min-width: 200px;
+}
+
+.info-item:first-child {
+  border-bottom: 1px solid;
 }
 
 @media (max-width: 320px) {
