--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,37 +14,95 @@ main {
   display: flex;
   gap: 5px;
   flex-wrap: wrap;
-  flex-shrink: 0;
   min-height: 30px;
   width: 100%;
   justify-content: space-between;
 }
 
-#actionables label,
-input {
+#file-actions {
+  display: flex;
+  gap: 5px;
+  max-width: 100%;
+}
+
+#actionables .upload-label,
+input,
+button {
   padding: 5px 10px;
   border-radius: 3px;
   border: 1px solid;
 }
 
-#actionables label {
-  text-align: center;
-  width: 120px;
-  background-color: white;
-  flex-shrink: 1;
+input[name="search"],
+.upload-label {
+  width: 210px;
+  max-width: 100%;
 }
 
-#actionables label:hover {
+#actionables .upload-label,
+input[name="search"] {
+  flex-shrink: 0;
+  min-width: 100px;
+}
+#actionables .upload-label {
+  display: block;
+  text-align: center;
+  background-color: white;
+  flex-shrink: 0;
+  margin-left: auto;
+}
+
+#actionables .upload-label:hover {
   cursor: pointer;
 }
 
 #actionables input[type="file"] {
-  width: 0.1px;
-  height: 0.1px;
+  width: 0;
+  height: 0;
   opacity: 0;
   overflow: hidden;
   position: absolute;
   z-index: -1;
+}
+
+#file-actions {
+  display: flex;
+  width: 0;
+  transition: width 0.5s;
+}
+
+#file-actions .file-action {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 0px;
+  height: 0px;
+  background-color: #0c6df7;
+  border: none;
+  opacity: 1;
+  visibility: hidden;
+}
+
+#file-actions.shared-wd {
+  width: 80px;
+}
+
+#file-actions.shared-wd .file-action {
+  width: 40px;
+  height: 30px;
+  opacity: 1;
+  visibility: visible;
+}
+
+#file-actions #eject-file {
+  background-color: red;
+}
+#file-actions svg {
+  height: 100%;
+}
+
+#file-actions svg path {
+  fill: white;
 }
 
 #cards-holder {
@@ -52,7 +110,7 @@ input {
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   overflow-y: auto;
   width: 100%;
-  min-height: 700px;
+  height: 700px;
   max-width: 100%;
   max-height: 100%;
   gap: 20px;
@@ -82,8 +140,16 @@ input {
   border-bottom: 1px solid;
 }
 
-@media (max-width: 320px) {
+@media (max-width: 480px) {
   #cards-holder {
     grid-template-columns: 1fr;
+  }
+
+  #actionables {
+    justify-content: center;
+  }
+
+  #actionables .upload-label {
+    margin-left: 5px;
   }
 }
