UI: Created error element

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,6 +8,7 @@ main {
   padding: 10px;
   gap: 20px;
   max-width: 100%;
+  overflow: hidden;
 }
 
 #actionables {
@@ -33,17 +34,10 @@ button {
   border: 1px solid;
 }
 
-input[name="search"],
-.upload-label {
+input[name="search"] {
   width: 210px;
-  max-width: 100%;
 }
 
-#actionables .upload-label,
-input[name="search"] {
-  flex-shrink: 0;
-  min-width: 100px;
-}
 #actionables .upload-label {
   display: block;
   text-align: center;
@@ -105,9 +99,27 @@ input[name="search"] {
   fill: white;
 }
 
+#error {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  right: 0;
+  margin: 0 5px;
+  color: red;
+  border: 1px solid #ea6868;
+  background-color: #ffdadb;
+  border-radius: 3px;
+  padding: 5px;
+  max-width: 100%;
+}
+
+#error svg {
+  font-size: 1.2rem;
+}
 #cards-holder {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  place-content: baseline;
   overflow-y: auto;
   width: 100%;
   height: 700px;
