UI: Disable submit button while a file is currently being uploaded

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,8 +13,13 @@ button {
   border: none;
   background-color: transparent;
 }
+
 button:hover {
   cursor: pointer;
+}
+
+button:disabled {
+  cursor: not-allowed;
 }
 #root {
   display: flex;
