--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -77,6 +77,10 @@ input[name="search"] {
   visibility: hidden;
 }
 
+#file-actions .file-action:disabled {
+  opacity: 0.5;
+}
+
 #file-actions.shared-wd {
   width: 80px;
 }
@@ -84,7 +88,6 @@ input[name="search"] {
 #file-actions.shared-wd .file-action {
   width: 40px;
   height: 30px;
-  opacity: 1;
   visibility: visible;
 }
 
@@ -126,6 +129,17 @@ input[name="search"] {
   max-width: 100%;
   max-height: 100%;
   gap: 20px;
+}
+
+#search-cta {
+  display: flex;
+  width: 100%;
+  height: 200px;
+  grid-column: 1/-1;
+  border-radius: 3px;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 .info-card {
