--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -17,18 +17,12 @@ main {
   flex-wrap: wrap;
   min-height: 30px;
   width: 100%;
-  justify-content: space-between;
-}
-
-#file-actions {
-  display: flex;
-  gap: 5px;
-  max-width: 100%;
 }
 
 #actionables .upload-label,
 input,
 button {
+  max-width: 100%;
   padding: 5px 10px;
   border-radius: 3px;
   border: 1px solid;
@@ -36,14 +30,19 @@ button {
 
 input[name="search"] {
   width: 210px;
+  margin-right: auto;
+}
+
+#actionables input,
+#file-actions,
+.upload-label {
+  flex-shrink: 1;
 }
 
 #actionables .upload-label {
   display: block;
   text-align: center;
   background-color: white;
-  flex-shrink: 0;
-  margin-left: auto;
 }
 
 #actionables .upload-label:hover {
@@ -63,6 +62,8 @@ input[name="search"] {
   display: flex;
   width: 0;
   transition: width 0.5s;
+  gap: 5px;
+  margin-right: -5px;
 }
 
 #file-actions .file-action {
@@ -134,7 +135,8 @@ input[name="search"] {
 #search-cta {
   display: flex;
   width: 100%;
-  height: 200px;
+  min-height: 200px;
+  padding: 5px;
   grid-column: 1/-1;
   border-radius: 3px;
   justify-content: center;
@@ -148,34 +150,53 @@ input[name="search"] {
   align-items: center;
   justify-content: center;
   height: 200px;
+  max-height: 100%;
   border: 1px solid black;
   border-radius: 5px;
   gap: 5px;
   padding: 5px;
 }
 
+h1.info-item {
+  font-size: clamp(1vw, 10vw, 1.5em);
+}
+
+p.info-item {
+  font-size: clamp(1vw, 10vw, 1em);
+}
+
+.info-item svg {
+  width: 16px;
+  height: 16px;
+}
 .info-item {
   display: flex;
   align-items: center;
   gap: 10px;
   padding: 0 5px;
-  min-width: 200px;
+  width: 200px;
+  word-wrap: break-word;
+  max-width: 100%;
 }
 
 .info-item:first-child {
   border-bottom: 1px solid;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 300px) {
   #cards-holder {
-    grid-template-columns: 1fr;
+    grid-template-columns: minmax(0, 1fr);
   }
 
-  #actionables {
-    justify-content: center;
+  input[name="search"] {
+    flex-grow: 1;
   }
 
-  #actionables .upload-label {
-    margin-left: 5px;
+  #file-actions {
+    margin-right: 0;
+  }
+
+  .upload-label {
+    margin-right: auto;
   }
 }
